templateContestList && contestList: Información de condiciones de ManagerLevel && TrueSkill

--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -47,6 +47,7 @@
                 { "title": "Min Instances" },
                 { "title": "Min/Max Entries" },
                 { "title": "Salary Cap" },
+                { "title": "Filters" },
                 { "title": "Entry Fee" },
                 { "title": "Multiplier" },
                 { "title": "Pool" },
