--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -27,6 +27,7 @@
                 { "title": "Name" },
                 { "title": "Current Users" },
                 { "title": "Max Entries" },
+                { "title": "Filters" },
                 { "title": "Prize Pool" },
                 { "title": "TemplateContestId" },
                 { "title": "Competition" },
