TemplateContestForm: Setup de filtros para las estadísticas ManagerLevel/FieldPos

--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -325,6 +325,30 @@
                 10
             )
 
+            <br><br/>
+
+            <h3>Filters ManagerLevel / FieldPos: </h3>
+
+            @myInputText(
+                templateContestForm("filterByDFP"),
+                "Fantasy Points Min.",
+                10,
+                false
+            )
+
+            @myInputText(
+                templateContestForm("filterByPlayedMatches"),
+                "Played Matches Min.",
+                10,
+                false
+            )
+
+            @myInputText(
+                templateContestForm("filterByDays"),
+                "Days",
+                10
+            )
+
             </form>
 
             <br/><br/>
