application.conf: Model: Switch entre Liga + Premier / Mundial / Eurocopa

--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -103,6 +103,7 @@
     @if(competitionFilter == "*") {
         <a href="@TemplateContestController.newForm(23)"><button class="btn btn-success">[@competition_name("23")] Add Contest</button></a>
         <a href="@TemplateContestController.newForm(8)"><button class="btn btn-success">[@competition_name("8")] Add Contest</button></a>
+        <a href="@TemplateContestController.newForm(4)"><button class="btn btn-success">[@competition_name("4")] Add Contest</button></a>
     } else {
         <a href="@TemplateContestController.newForm(competitionFilter.toInt)"><button class="btn btn-success">[@competition_name(competitionFilter)] Add Contest</button></a>
     }
