Admin: Actualización de los templateSoccerPlayers desde los optaPlayers

--- a/admin/app/views/template_soccer_player_list.scala.html
+++ b/admin/app/views/template_soccer_player_list.scala.html
@@ -36,7 +36,12 @@
 
 <h1 class="page-header">Template Soccer Players</h1>
 
+<div>
+    <a href="@TemplateSoccerPlayerController.showChangesList"><button class="btn btn-success">Changes List from Opta</button></a>
+</div>
+
 <h2 class="sub-header"></h2>
+
 <div class="table-responsive">
     <table id="ajax_table_id" class="table table-striped"></table>
 </div>
