--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -104,6 +104,7 @@
         <a data-toggle="dropdown" href="#">@stateFilter</a><span class="caret"></span>
         <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
             <li><a href='@ContestController.showFilterByCompetition(competitionFilter, "ACTIVE")'>ACTIVE</a></li>
+            <li><a href='@ContestController.showFilterByCompetition(competitionFilter, "LIVE")'>LIVE</a></li>
             <li><a href='@ContestController.showFilterByCompetition(competitionFilter, "HISTORY")'>HISTORY</a></li>
         </ul>
     </span>
