--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -221,6 +221,12 @@
             )
 
             @myInputText(
+                templateContestForm("maxInstances"),
+                "Max Instances",
+                10
+            )
+
+            @myInputText(
                 templateContestForm("minEntries"),
                 "Min Entries",
                 10,
