fix Admin: TemplateContest: Mantener el número de instancias bajo demanda

--- a/admin/app/views/template_contest.scala.html
+++ b/admin/app/views/template_contest.scala.html
@@ -69,6 +69,7 @@
 <h1 class="page-header">Template Contest</h1>
 
 <a href="@TemplateContestController.showManagerLevels(template_contest.templateContestId.toString())"><button class="btn btn-success">Manager Levels</button></a>
+<a href="@TemplateContestController.maintainNumInstances(template_contest.templateContestId.toString())"><button class="btn btn-success">Maintain Num Instances</button></a>
 
 <h2 class="sub-header">@template_contest.name  @template_state</h2>
 <div class="table-responsive">
