Admin: ContestController: checkFreeSlots

--- a/admin/app/views/contest.scala.html
+++ b/admin/app/views/contest.scala.html
@@ -1,8 +1,14 @@
 @(contest: model.Contest)
 
+@import controllers.admin.routes._
 
 @main("Contest - Admin") {
 
 <h1 class="page-header">Contest: @contest.name</h1>
 
+<a href="@ContestController.checkFreeSlots(contest.contestId.toString())"><button class="btn btn-success">Check FreeSlots</button></a>
+
+<h4>Num Entries: @contest.getNumEntries()</h4>
+<h4>Max Entries: @contest.maxEntries</h4>
+<h4>FreeSlots: @contest.freeSlots</h4>
 }
