Admin: user_list: Muestra el goldBalance (en lugar de calcularlo)

--- a/admin/app/views/user_list.scala.html
+++ b/admin/app/views/user_list.scala.html
@@ -24,7 +24,7 @@
                             "@p.nickName",
                             "@GlobalDate.formatDate(p.createdAt)",
                             "@p.wins",
-                            "@MoneyUtils.asString(p.calculateGoldBalance())",
+                            "@MoneyUtils.asString(p.goldBalance)",
                             "@MoneyUtils.asString(p.earnedMoney)",
                             "@p.trueSkill"
                         ] @if(index < users.size-1) { , }
