--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -83,6 +83,7 @@
 <div style="float: right; margin-right:100px;">
     <button class="btn btn-primary" onclick="verifyPrizes()">Verify Prizes</button>
     <button class="btn btn-primary" onclick="verifyEntryFee()">Verify EntryFee</button>
+    <a href="@ContestController.recalculateTrueSkill()"><button class="btn btn-danger">Recalculate TrueSkill</button></a>
 </div>
 }
 
