--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -91,6 +91,7 @@
                 </ul>
             }
             <ul class="nav nav-sidebar">
+                <li><a href="@MaintenanceController.index">Maintenance</a></li>
                 <li><a href="@MigrationsController.index">Migrations</a></li>
             </ul>
         </div>
