--- a/admin/app/views/template_contest.scala.html
+++ b/admin/app/views/template_contest.scala.html
@@ -68,6 +68,7 @@
 
 <h1 class="page-header">Template Contest</h1>
 
+<a href="@TemplateContestController.showSoccerPlayersStats(template_contest.templateContestId.toString())"><button class="btn btn-success">SoccerPlayer Stats</button></a>
 <a href="@TemplateContestController.showManagerLevels(template_contest.templateContestId.toString())"><button class="btn btn-success">Manager Levels</button></a>
 <a href="@TemplateContestController.maintainNumInstances(template_contest.templateContestId.toString())"><button class="btn btn-success">Maintain Num Instances</button></a>
 
