--- a/admin/app/views/maintenance.scala.html
+++ b/admin/app/views/maintenance.scala.html
@@ -30,5 +30,7 @@
 
 <h1 class="page-header">Maintenance</h1>
 
+<a href="@MaintenanceController.apply()"><button class="btn btn-danger">Apply</button></a>
+
 <h2 class="sub-header"></h2>
 }
