--- a/admin/app/views/user_list.scala.html
+++ b/admin/app/views/user_list.scala.html
@@ -2,7 +2,7 @@
 
 @import model._
 @import utils._
-@import controllers.admin.routes.DashboardController
+@import controllers.admin.routes._
 
 @scripts = {
 <script type="text/javascript">
@@ -47,6 +47,10 @@
 @main("Users - Admin", scripts) {
 
 <h1 class="page-header">Users</h1>
+
+<div style="margin: 20px">
+<a href="@UserController.participation()"><button class="btn btn-success">Participation Stats</button></a>
+</div>
 
 <div class="table-responsive">
     <table id="ajax_table_id" class="table table-striped"></table>
