Admin: Participation Users: New Users

--- a/admin/app/views/users_participation.scala.html
+++ b/admin/app/views/users_participation.scala.html
@@ -16,6 +16,7 @@
         <th>StartDate</th>
         <th>ContestEntries</th>
         <th>Users</th>
+        <th>New Users</th>
         <th>NOVATO</th>
         <th>AMATEUR</th>
         <th>PROFESIONAL</th>
@@ -29,6 +30,7 @@
         <td>@stats("startDate")</td>
         <td>@stats("total")</td>
         <td>@stats("users")</td>
+        <td>@stats("newUsers")</td>
         <td>@stats("NOVATO")</td>
         <td>@stats("AMATEUR")</td>
         <td>@stats("PROFESIONAL")</td>
