Admin: Users: Transactions Stats

--- a/admin/app/views/user_list.scala.html
+++ b/admin/app/views/user_list.scala.html
@@ -50,6 +50,7 @@
 
 <div style="margin: 20px">
 <a href="@UserController.participation()"><button class="btn btn-success">Participation Stats</button></a>
+<a href="@UserController.transactionsStats()"><button class="btn btn-success">Transactions Stats</button></a>
 </div>
 
 <div class="table-responsive">
