--- a/admin/app/views/opta_competition_list.scala.html
+++ b/admin/app/views/opta_competition_list.scala.html
@@ -77,6 +77,13 @@
 
 <h2 class="sub-header"></h2>
 
+@if(model.Model.isLocalHostTargetEnvironment()) {
+<div style="float: right; margin-bottom:40px; margin-right:100px;">
+    <a href="@OptaController.updateCompetition("8")"><button class="btn btn-danger">Update "Premier League"</button></a>
+    <a href="@OptaController.updateCompetition("5")"><button class="btn btn-danger">Update "Champions League"</button></a>
+</div>
+}
+
 <div class="table-responsive">
     <table id="ajax_table_id" class="table table-striped"></table>
 </div>
