--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -113,19 +113,20 @@
     @if(competitionFilter == "*") {
         <a href="@TemplateContestController.newForm(23)"><button class="btn btn-success">[@competition_name("23")] Add Contest</button></a>
         <a href="@TemplateContestController.newForm(8)"><button class="btn btn-success">[@competition_name("8")] Add Contest</button></a>
+        <a href="@TemplateContestController.newForm(5)"><button class="btn btn-success">[@competition_name("5")] Add Contest</button></a>
     } else {
         <a href="@TemplateContestController.newForm(competitionFilter.toInt)"><button class="btn btn-success">[@competition_name(competitionFilter)] Add Contest</button></a>
     }
 
     @if(model.Model.isLocalHostTargetEnvironment()) {
-    <div style="float: right; margin-right:100px;">
+    <!--div style="float: right; margin-right:100px;">
         @if(!automaticallyCreateEnabled) {
             <a href="@TemplateContestController.setCreatingTemplateContestsState(true)"><button class="btn btn-danger">Start Creating Template Contests</button></a>
         } else {
             <a href="@TemplateContestController.setCreatingTemplateContestsState(false)"><button class="btn btn-warning">Stop Creating Template Contests</button></a>
         }
         <a href="@TemplateContestController.createAll"><button class="btn btn-danger">Create All Contests</button></a>
-    </div>
+    </div-->
     }
 
     <h2 class="sub-header"></h2>
